force-app/main/default/objects/Opportunity/fields/Last_meeting_call_date__c.field-meta.xml
<CustomField>
    <fullName>Last_meeting_call_date__c</fullName>
    <label>Last meeting/call date</label>
    <type>Date</type>
</CustomField>