force-app/main/default/objects/Opportunity/fields/rollup_Currency__c.field-meta.xml
<CustomField>
    <fullName>rollup_Currency__c</fullName>
    <label>rollup Currency</label>
    <summarizedField>Product__c.Price__c</summarizedField>
    <summaryForeignKey>Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>