force-app/main/default/objects/Opportunity/validationRules/Opp_PriceBook.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_PriceBook</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Pricebook2Id )</errorConditionFormula>
    <errorMessage>Price Book Should be Selected</errorMessage>
</ValidationRule>